I don't understand why i keep getting 403 responses. Need to still understand exaclty how these AuthenticationRespone / RegistRequest / AuthenticationRequest as well as all the filters work.